--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,37 @@ body{
   width: 40px;
   position: absolute;
   top: 10px;
+  right: 10px;
 }
 
-body > img {
-  margin: 0 10px;
+#listaFilmes img{
+  margin: 10px;
+  max-height: 25px;
 }
 
-img{
-  max-height: 250px;
+.form-wrapper{
+  margin: 0 0 15px;
+}
+
+.form-wrapper input{
+  display: block;
+  margin: 0 auto;
+  padding: 10px 15px;
+}
+
+.form-wrapper button{
+  border: 0;
+  color: #fff;
+  background: #da1e26;
+  font-weight: bold;
+  padding: 15px 20px;
+  font-size: 16px;
+  border-radius: 4px;
+  margin-top: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.form-wrapper button:hover{
+  opacity: 0.8;
 }
